--- a/Class_Notes/09_20/index.html
+++ b/Class_Notes/09_20/index.html
@@ -59,7 +59,7 @@
 		float: right;
 		padding: 10px 20px;
 		margin-top: 50px;
-		background-color: rgb(255,100,0,0.8);
+		background-color: rgba(255,100,0,0.8);
     }
     </style>
 </head>
