--- a/Midterm/about.html
+++ b/Midterm/about.html
@@ -22,7 +22,7 @@
     <h1 class="title"> JIMMY LAUCHOY</h1>
         <nav id="main-nav">
             <ul class="clear-fix">
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="#">CONTACT</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">PORTFOLIO</a>
                     <ul>
