--- a/Midterm/about.html
+++ b/Midterm/about.html
@@ -33,6 +33,8 @@
                 <li><a href="index.html">HOME</a></li>
             </ul>
         </nav>
+        <a class = "insta" target="_blank" href="https://instagram.com/night_aul"><i class="fa fa-instagram fa-2" aria-hidden="true"></i></a>
+
     <img src="img/pfp.jpg" style="width:20%" class="pic">
     <div class="heading">
         <p>ABOUT ME</p>
