--- a/Midterm/photo.html
+++ b/Midterm/photo.html
@@ -31,6 +31,7 @@
                 <li><a href="index.html">HOME</a></li>
             </ul>
         </nav>
+    <a class = "insta" target="_blank" href="https://instagram.com/night_aul"><i class="fa fa-instagram fa-2" aria-hidden="true"></i></a>
 
     <div class="slideshow-container">
         <div class="slides fade">
