added instagram icons to all pages

--- a/Midterm/about.html
+++ b/Midterm/about.html
@@ -50,5 +50,6 @@
 </body>
 <script src="js/scripts.js"></script>
 <script src="js/modernizr-2.6.2.min.js"></script>
+<script src="https://use.fontawesome.com/ddf39ca00f.js"></script>
 
 </html>
