added new content

--- a/Midterm/about.html
+++ b/Midterm/about.html
@@ -22,7 +22,7 @@
     <h1 class="title"> JIMMY LAUCHOY</h1>
         <nav id="main-nav">
             <ul class="clear-fix">
-                <li><a href="#">CONTACT</a></li>
+                <li><a target="_blank" href="img/Jimmy_Lauchoy_Resume.pdf">CONTACT</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">PORTFOLIO</a>
                     <ul>
@@ -35,6 +35,11 @@
         </nav>
         <a class = "insta" target="_blank" href="https://instagram.com/night_aul"><i class="fa fa-instagram fa-2" aria-hidden="true"></i></a>
 
+
+    <div class="bg fade">
+        <img src="img/city-7.jpg" style="width:100%" class="bgPhoto">
+    </div>
+    <div class="color_layer"></div>
     <img src="img/pfp.jpg" style="width:20%" class="pic">
     <div class="heading">
         <p>ABOUT ME</p>
@@ -42,10 +47,6 @@
     <div class="description">
         <p>Jimmy Lauchoy is a self-taught creative artist raised in NYC. He currently attends NYU studying Computer Science, with a minor in Integrated Digital Media. He spends most of his free time exploring the city and planning shoots with friends or clients. He is known for his vibrant landscape photographs and striking portraits, as well as his ability to experiment with various light forms such as off-camera lighting and light painting. He is actively looking for opportunities to collaborate with other creative artists and to share his art form with others. </p>
     </div>
-    <div class="bg fade">
-        <img src="img/city-1.jpg" style="width:100%" class="bgPhoto">
-    </div>
-
     <br>
 </body>
 <script src="js/scripts.js"></script>
