--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -16,11 +16,11 @@
 
 </head>
 
-<body>
+<body id="index">
     <h1 class="title"> JIMMY LAUCHOY</h1>
         <nav id="main-nav">
             <ul class="clear-fix">
-                <li><a href="#">CONTACT</a></li>
+                <li><a target="_blank" href="img/Jimmy_Lauchoy_Resume.pdf">CONTACT</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">PORTFOLIO</a>
                     <ul>
@@ -33,29 +33,49 @@
         </nav>
 	<a class = "insta" target="_blank" href="https://instagram.com/night_aul"><i class="fa fa-instagram fa-2" aria-hidden="true"></i></a>
     <div class="slideshow-container">
-        <div class="slides fade">
-            <div class="numbertext">1 / 5</div>
+        <div class="aSlides fade">
+            <div class="numbertext">1 / 9</div>
             <img src="img/city-1.jpg" style="width:100%">
             <div class="text">NYC</div>
         </div>
-        <div class="slides fade">
-            <div class="numbertext">2 / 5</div>
+        <div class="aSlides fade">
+            <div class="numbertext">2 / 9</div>
             <img src="img/city-2.jpg" style="width:100%">
             <div class="text">LA</div>
         </div>
-        <div class="slides fade">
-            <div class="numbertext">3 / 5</div>
+        <div class="aSlides fade">
+            <div class="numbertext">3 / 9</div>
             <img src="img/city-3.jpg" style="width:100%">
             <div class="text">CHI</div>
         </div>
-        <div class="slides fade">
-            <div class="numbertext">4 / 5</div>
+        <div class="aSlides fade">
+            <div class="numbertext">4 / 9</div>
             <img src="img/city-4.jpg" style="width:100%">
             <div class="text">HK</div>
         </div>
-        <div class="slides fade">
-            <div class="numbertext">5 / 5</div>
+        <div class="aSlides fade">
+            <div class="numbertext">5 / 9</div>
             <img src="img/city-5.jpg" style="width:100%">
+            <div class="text">DC</div>
+        </div>
+        <div class="aSlides fade">
+            <div class="numbertext">6 / 9</div>
+            <img src="img/city-6.jpg" style="width:100%">
+            <div class="text">LA</div>
+        </div>
+        <div class="aSlides fade">
+            <div class="numbertext">7 / 9</div>
+            <img src="img/city-7.jpg" style="width:100%">
+            <div class="text">CHI</div>
+        </div>
+        <div class="aSlides fade">
+            <div class="numbertext">8 / 9</div>
+            <img src="img/city-8.jpg" style="width:100%">
+            <div class="text">HK</div>
+        </div>
+        <div class="aSlides fade">
+            <div class="numbertext">9 / 9</div>
+            <img src="img/city-9.jpg" style="width:100%">
             <div class="text">DC</div>
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -68,6 +88,10 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+            <span class="dot" onclick="currentSlide(7)"></span>
+            <span class="dot" onclick="currentSlide(8)"></span>
+            <span class="dot" onclick="currentSlide(9)"></span>
         </div>
     </div>
     <br>
