--- a/Midterm/photo.html
+++ b/Midterm/photo.html
@@ -16,11 +16,11 @@
     <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC" rel="stylesheet">
 </head>
 
-<body>
+<body id="photo">
     <h1 class="title"> JIMMY LAUCHOY</h1>
         <nav id="main-nav">
             <ul class="clear-fix">
-                <li><a href="#">CONTACT</a></li>
+                <li><a target="_blank" href="img/Jimmy_Lauchoy_Resume.pdf">CONTACT</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">PORTFOLIO</a>
                     <ul>
@@ -34,31 +34,47 @@
     <a class = "insta" target="_blank" href="https://instagram.com/night_aul"><i class="fa fa-instagram fa-2" aria-hidden="true"></i></a>
 
     <div class="slideshow-container">
-        <div class="slides fade">
-            <div class="numbertext">1 / 5</div>
+        <div class="mSlides fade">
+            <div class="numbertext">1 / 8</div>
             <img src="img/portrait-1.jpg" style="width:100%">
             <div class="text">NYC</div>
         </div>
-        <div class="slides fade">
-            <div class="numbertext">2 / 5</div>
+        <div class="mSlides fade">
+            <div class="numbertext">2 / 8</div>
             <img src="img/portrait-2.jpg" style="width:100%">
             <div class="text">LA</div>
         </div>
-        <div class="slides fade">
-            <div class="numbertext">3 / 5</div>
+        <div class="mSlides fade">
+            <div class="numbertext">3 / 8</div>
             <img src="img/portrait-3.jpg" style="width:100%">
             <div class="text">CHI</div>
         </div>
-        <div class="slides fade">
-            <div class="numbertext">4 / 5</div>
+        <div class="mSlides fade">
+            <div class="numbertext">4 / 8</div>
             <img src="img/portrait-4.jpg" style="width:100%">
             <div class="text">HK</div>
         </div>
-        <div class="slides fade">
-            <div class="numbertext">5 / 5</div>
+        <div class="mSlides fade">
+            <div class="numbertext">5 / 8</div>
             <img src="img/portrait-5.jpg" style="width:100%">
             <div class="text">DC</div>
         </div>
+        <div class="mSlides fade">
+            <div class="numbertext">6 / 8</div>
+            <img src="img/portrait-6.jpg" style="width:100%">
+            <div class="text">DC</div>
+        </div>
+        <div class="mSlides fade">
+            <div class="numbertext">7 / 8</div>
+            <img src="img/portrait-7.jpg" style="width:100%">
+            <div class="text">DC</div>
+        </div>
+        <div class="mSlides fade">
+            <div class="numbertext">8 / 8</div>
+            <img src="img/portrait-8.jpg" style="width:100%">
+            <div class="text">DC</div>
+        </div>
+
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <!-- &#10094 left angle bracket-->
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -69,6 +85,9 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+            <span class="dot" onclick="currentSlide(7)"></span>
+            <span class="dot" onclick="currentSlide(8)"></span>
         </div>
     </div>
     <br>
