--- a/Midterm/video.html
+++ b/Midterm/video.html
@@ -16,11 +16,11 @@
     <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC" rel="stylesheet">
 </head>
 
-<body class="videobg">
+<body class="videobg" id="video">
     <h1 class="title"> JIMMY LAUCHOY</h1>
         <nav id="main-nav">
             <ul class="clear-fix">
-                <li><a href="#">CONTACT</a></li>
+                <li><a target="_blank" href="img/Jimmy_Lauchoy_Resume.pdf">CONTACT</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="#">PORTFOLIO</a>
                     <ul>
@@ -34,13 +34,13 @@
     <a class = "insta" target="_blank" href="https://instagram.com/night_aul"><i class="fa fa-instagram fa-2" aria-hidden="true"></i></a>
 
     <div class="slideshow-container">
-        <div class="movie slides fade">
-            <div class="numbertext">1 / 5</div>
+        <div class="movie mSlides fade">
+            <div class="numbertext">1 / 2</div>
             <video width="800px" height="600px" controls>
                 <source src="img/vid-1.mp4" type="video/mp4">
             </video>
         </div>
-        <div class="slides fade">
+        <div class="mSlides fade">
             <video width="800px" height="600px" controls>
                 <source src="img/vid-2.mp4" type="video/mp4">
             </video>
