--- a/Midterm/about.html
+++ b/Midterm/about.html
@@ -49,24 +49,26 @@
     <div class="description">
         <p>Jimmy Lauchoy is a self-taught creative artist raised in NYC. He currently attends NYU studying Computer Science, with a minor in Integrated Digital Media. He spends most of his free time exploring the city and planning shoots with friends or clients. He is known for his vibrant landscape photographs and striking portraits, as well as his ability to experiment with various light forms such as off-camera lighting and light painting. He is actively looking for opportunities to collaborate with other creative artists and to share his art form with others. </p>
     </div>
-    <button class = "btn-toggle" id="edu">Education</button>
-    <div class="dropdown" id="education">
-        <ul>
-            <li>New York University</li>
-            <li>Computer Science Major</li>
-            <li>Class of 2019</li>
-        </ul>
-    </div>
-    <button class = "btn-toggle" id="equip">Equipment</button>
-    <div class="dropdown" id="equipment">
-        <ul>
-            <li>Nikon d5200</li>
-            <li>Sigma 18-35mm f1.8 DC HSM Art</li>
-            <li>Nikon 35mm f/1.8G DX</li>
-            <li>Nikon 50mm f/1.8D</li>
-            <li>Adobe Lightroom CC</li>
-            <li>Adobe Photoshop CC</li>
-        </ul>
+    <div class = "buttons">
+        <button class = "btn-toggle" id="edu">Education</button>
+        <div class="dropdown" id="education">
+            <ul>
+                <li>New York University</li>
+                <li>Computer Science Major</li>
+                <li>Class of 2019</li>
+            </ul>
+        </div>
+        <button class = "btn-toggle" id="equip">Equipment</button>
+        <div class="dropdown" id="equipment">
+            <ul>
+                <li>Nikon d5200</li>
+                <li>Sigma 18-35mm f1.8 Art</li>
+                <li>Nikon 35mm f/1.8G DX</li>
+                <li>Nikon 50mm f/1.8D</li>
+                <li>Adobe Lightroom CC</li>
+                <li>Adobe Photoshop CC</li>
+            </ul>
+        </div>
     </div>
     <br>
 </body>
