added final files

--- a/Final/gallery.html
+++ b/Final/gallery.html
@@ -6,28 +6,67 @@
 
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="js/fancybox/dist/jquery.fancybox.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/gallery.css">
 </head>
 <body>
   <h1>GALLERY</h1>
   <!-- Your HTML content goes here -->
-  <a href="img/city-1.jpg" data-fancybox="gallery">
-    <img src="img/city-1.jpg" alt="">
+  <a href="img/gallery/fashion/AM Insta-1.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/AM Insta-1.jpg" alt="">
   </a>
-  <a href="img/city-2.jpg" data-fancybox="gallery">
-    <img src="img/city-2.jpg" alt="">
+  <a href="img/gallery/fashion/Christian_0811-4.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/Christian_0811-4.jpg" alt="">
   </a>
-  <a href="img/city-3.jpg" data-fancybox="gallery">
-    <img src="img/city-3.jpg" alt="">
+  <a href="img/gallery/fashion/FangNi_CP 07_16-10.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/FangNi_CP 07_16-10.jpg" alt="">
   </a>
-  <a href="img/city-4.jpg" data-fancybox="gallery">
-    <img src="img/city-4.jpg" alt="">
+  <a href="img/gallery/fashion/prom-33.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/prom-33.jpg" alt="">
   </a>
-  <a href="img/city-5.jpg" data-fancybox="gallery">
-    <img src="img/city-5.jpg" alt="">
+  <a href="img/gallery/fashion/ScavHunt-16.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/ScavHunt-16.jpg" alt="">
   </a>
-  <a href="img/city-6.jpg" data-fancybox="gallery">
-    <img src="img/city-6.jpg" alt="">
+  <a href="img/gallery/fashion/TiffHike-4.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/TiffHike-4.jpg" alt="">
+  </a>
+  <a href="img/gallery/landscape/avadobroCityVer-1.jpg" data-fancybox="gallery">
+    <img src="img/gallery/landscape/deck-1.jpg" alt="">
+  </a>
+  <a href="img/gallery/landscape/DessertGoals 0819-78.jpg" data-fancybox="gallery">
+    <img src="img/gallery/landscape/DessertGoals 0819-78.jpg" alt="">
+  </a>
+  <a href="img/gallery/landscape/landscape_cover_original-1.jpg" data-fancybox="gallery">
+    <img src="img/gallery/landscape/landscape_cover_original-1.jpg" alt="">
+  </a>
+  <a href="img/gallery/portrait/ChrisJoy-5.jpg" data-fancybox="gallery">
+    <img src="img/gallery/portrait/ChrisJoy-5.jpg" alt="">
+  </a>
+  <a href="img/gallery/portrait/DessertGoals 0819-16.jpg" data-fancybox="gallery">
+    <img src="img/gallery/portrait/DessertGoals 0819-16.jpg" alt="">
+  </a>
+  <a href="img/gallery/portrait/DessertGoals 0819-80.jpg" data-fancybox="gallery">
+    <img src="img/gallery/portrait/DessertGoals 0819-80.jpg" alt="">
+  </a>
+  <a href="img/gallery/portrait/DYS 07_02-28.jpg" data-fancybox="gallery">
+    <img src="img/gallery/portrait/DYS 07_02-28.jpg" alt="">
+  </a>
+  <a href="img/gallery/portrait/Gilbert_pshoot-3.jpg" data-fancybox="gallery">
+    <img src="img/gallery/portrait/Gilbert_pshoot-3.jpg" alt="">
+  </a>
+  <a href="img/gallery/portrait/hurrell-2.jpg" data-fancybox="gallery">
+    <img src="img/gallery/portrait/hurrell-2.jpg" alt="">
+  </a>
+  <a href="img/gallery/portrait/JoeyWong-1.jpg" data-fancybox="gallery">
+    <img src="img/gallery/portrait/JoeyWong-1.jpg" alt="">
+  </a>
+  <a href="img/gallery/portrait/Joy_Med_2048_noise.jpg" data-fancybox="gallery">
+    <img src="img/gallery/portrait/Joy_Med_2048_noise.jpg" alt="">
+  </a>
+  <a href="img/gallery/wildlife/FireIsland-21.jpg" data-fancybox="gallery">
+    <img src="img/gallery/wildlife/FireIsland-21.jpg" alt="">
+  </a>
+  <a href="img/gallery/wildlife/topBest15to16-10.jpg" data-fancybox="gallery">
+    <img src="img/gallery/wildlife/topBest15to16-10.jpg" alt="">
   </a>
   <!-- JS -->
   <script
