--- a/Final/index.html
+++ b/Final/index.html
@@ -75,43 +75,46 @@
             </section>
         </section>
         <section id="galleryPanel">
-            <div class="slideshow-container">
-                <div class="aSlides fade">
+            <section class="slideshow-container">
+                <section class="aSlides fade">
                     <img src="img/city-1.jpg" style="width:100%">
-                </div>
-                <div class="aSlides fade">
+                </section>
+                <section class="aSlides fade">
                     <img src="img/city-2.jpg" style="width:100%">
-                </div>
-                <div class="aSlides fade">
+                </section>
+                <section class="aSlides fade">
                     <img src="img/city-3.jpg" style="width:100%">
-                </div>
-                <div class="aSlides fade">
+                </section>
+                <section class="aSlides fade">
                     <img src="img/city-4.jpg" style="width:100%">
-                </div>
-                <div class="aSlides fade">
+                </section>
+                <section class="aSlides fade">
                     <img src="img/city-5.jpg" style="width:100%">
-                </div>
-                <div class="aSlides fade">
+                </section>
+                <section class="aSlides fade">
                     <img src="img/city-6.jpg" style="width:100%">
-                </div>
-                <div class="aSlides fade">
+                </section>
+                <section class="aSlides fade">
                     <img src="img/city-7.jpg" style="width:100%">
-                </div>
-                <div class="aSlides fade">
+                </section>
+                <section class="aSlides fade">
                     <img src="img/city-8.jpg" style="width:100%">
-                </div>
-                <div class="aSlides fade">
+                </section>
+                <section class="aSlides fade">
                     <img src="img/city-9.jpg" style="width:100%">
-                </div>
-            </div>
-<!--             <img class="bcg" style="display: none;" src="img/bg/anders-jilden-307322.jpg" alt=""> -->
-            <section class="gallery-title">Portfolio
-                <section>Explore</section>
+                </section>
             </section>
+            <section class="gallery-title">Portfolio
+                <a class="gallery-explore" href="gallery.html"> Explore</a>
+            </section>
+            <!--             <img class="bcg" style="display: none;" src="img/bg/anders-jilden-307322.jpg" alt=""> -->
         </section>
         <section id="aboutPanel">
             <img class="bcg" style="display: none;" src="img/bg/hills-1.jpg" alt="">
-            <h2>About Panel</h2>
+            <section class="circle-crop">
+                <section class="head-photo"></section>
+            </section>
+            <p class="bio">Jimmy Lauchoy is a self-taught creative artist raised in NYC. He spends most of his free time exploring the city and planning shoots with friends or clients. He is known for his vibrant landscape photographs and striking portraits, as well as his ability to experiment with various light forms such as off-camera lighting and light painting. He is actively looking for opportunities to collaborate with other creative artists and to share his art form with others. </p>
         </section>
     </main>
     </div>
