make change to gallery

--- a/Final/gallery.html
+++ b/Final/gallery.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" type="text/css" href="css/gallery.css">
 </head>
 <body>
+  <a href="index.html"><h2 class="logo">JIMMY LAUCHOY</h2></a>
   <h1>GALLERY</h1>
+  <section>
   <!-- Your HTML content goes here -->
   <a href="img/gallery/fashion/AM Insta-1.jpg" data-fancybox="gallery">
     <img src="img/gallery/fashion/AM Insta-1.jpg" alt="">
@@ -29,7 +31,7 @@
   <a href="img/gallery/fashion/TiffHike-4.jpg" data-fancybox="gallery">
     <img src="img/gallery/fashion/TiffHike-4.jpg" alt="">
   </a>
-  <a href="img/gallery/landscape/avadobroCityVer-1.jpg" data-fancybox="gallery">
+  <a href="img/gallery/landscape/deck-1.jpg" data-fancybox="gallery">
     <img src="img/gallery/landscape/deck-1.jpg" alt="">
   </a>
   <a href="img/gallery/landscape/DessertGoals 0819-78.jpg" data-fancybox="gallery">
@@ -68,6 +70,8 @@
   <a href="img/gallery/wildlife/topBest15to16-10.jpg" data-fancybox="gallery">
     <img src="img/gallery/wildlife/topBest15to16-10.jpg" alt="">
   </a>
+</section>
+<h1 id="footer">&copy; Jimmy Lauchoy 2017</h1>
   <!-- JS -->
   <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
