--- a/Final/gallery.html
+++ b/Final/gallery.html
@@ -1,84 +1,129 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>JIMMY LAUCHOY</title>
 
-  <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="js/fancybox/dist/jquery.fancybox.min.css">
-  <link rel="stylesheet" type="text/css" href="css/gallery.css">
+<head>
+    <meta charset="utf-8">
+    <title>JIMMY LAUCHOY</title>
+    <link rel="icon" type="image/png" href="img/favicon/icon-2.png">
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="js/fancybox/dist/jquery.fancybox.min.css">
+    <link rel="stylesheet" type="text/css" href="css/gallery.css">
 </head>
-<body>
-  <a href="index.html"><h2 class="logo">JIMMY LAUCHOY</h2></a>
-  <h1>GALLERY</h1>
-  <section>
-  <!-- Your HTML content goes here -->
-  <a href="img/gallery/fashion/AM Insta-1.jpg" data-fancybox="gallery">
+
+<body id="gallery">
+    <div class="cube-wrapper">
+        <div class="sk-cube-grid">
+            <div class="sk-cube sk-cube1"></div>
+            <div class="sk-cube sk-cube2"></div>
+            <div class="sk-cube sk-cube3"></div>
+            <div class="sk-cube sk-cube4"></div>
+            <div class="sk-cube sk-cube5"></div>
+            <div class="sk-cube sk-cube6"></div>
+            <div class="sk-cube sk-cube7"></div>
+            <div class="sk-cube sk-cube8"></div>
+            <div class="sk-cube sk-cube9"></div>
+        </div>
+    </div>
+    <a class="logo-box" href="index.html"><h2 class="logo">JIMMY LAUCHOY</h2></a>
+    <h1>GALLERY</h1>
+    <section>
+        <a href="img/gallery/fashion/AM Insta-1.jpg" data-fancybox="gallery">
     <img src="img/gallery/fashion/AM Insta-1.jpg" alt="">
   </a>
-  <a href="img/gallery/fashion/Christian_0811-4.jpg" data-fancybox="gallery">
+        <a href="img/gallery/fashion/Christian_0811-4.jpg" data-fancybox="gallery">
     <img src="img/gallery/fashion/Christian_0811-4.jpg" alt="">
   </a>
-  <a href="img/gallery/fashion/FangNi_CP 07_16-10.jpg" data-fancybox="gallery">
+        <a href="img/gallery/fashion/DessertGoals 0819-61.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/DessertGoals 0819-61.jpg" alt="">
+  </a>
+        <a href="img/gallery/fashion/FangNi_CP 07_16-10.jpg" data-fancybox="gallery">
     <img src="img/gallery/fashion/FangNi_CP 07_16-10.jpg" alt="">
   </a>
-  <a href="img/gallery/fashion/prom-33.jpg" data-fancybox="gallery">
+        <a href="img/gallery/fashion/prom-33.jpg" data-fancybox="gallery">
     <img src="img/gallery/fashion/prom-33.jpg" alt="">
   </a>
-  <a href="img/gallery/fashion/ScavHunt-16.jpg" data-fancybox="gallery">
-    <img src="img/gallery/fashion/ScavHunt-16.jpg" alt="">
+        <a href="img/gallery/fashion/ChristianLee_1014-37.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/ChristianLee_1014-37.jpg" alt="">
   </a>
-  <a href="img/gallery/fashion/TiffHike-4.jpg" data-fancybox="gallery">
+        <a href="img/gallery/fashion/ChristianLee_1014-6.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/ChristianLee_1014-6.jpg" alt="">
+  </a>
+        <a href="img/gallery/fashion/ChristianLee_1014-43.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/ChristianLee_1014-43.jpg" alt="">
+  </a>
+        <a href="img/gallery/fashion/TiffHike-4.jpg" data-fancybox="gallery">
     <img src="img/gallery/fashion/TiffHike-4.jpg" alt="">
   </a>
-  <a href="img/gallery/landscape/deck-1.jpg" data-fancybox="gallery">
+        <a href="img/gallery/fashion/Hassan-1.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/Hassan-1.jpg" alt="">
+  </a>
+        <a href="img/gallery/fashion/HP-4.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/HP-4.jpg" alt="">
+  </a>
+        <a href="img/gallery/fashion/Jessica_photoshoot.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/Jessica_photoshoot.jpg" alt="">
+  </a>
+        <a href="img/gallery/fashion/XCRPT_Slate-5.jpg" data-fancybox="gallery">
+    <img src="img/gallery/fashion/XCRPT_Slate-5.jpg" alt="">
+  </a>
+        <a href="img/gallery/landscape/deck-1.jpg" data-fancybox="gallery">
     <img src="img/gallery/landscape/deck-1.jpg" alt="">
   </a>
-  <a href="img/gallery/landscape/DessertGoals 0819-78.jpg" data-fancybox="gallery">
+        <a href="img/gallery/landscape/DessertGoals 0819-78.jpg" data-fancybox="gallery">
     <img src="img/gallery/landscape/DessertGoals 0819-78.jpg" alt="">
   </a>
-  <a href="img/gallery/landscape/landscape_cover_original-1.jpg" data-fancybox="gallery">
+        <a href="img/gallery/landscape/landscape_cover_original-1.jpg" data-fancybox="gallery">
     <img src="img/gallery/landscape/landscape_cover_original-1.jpg" alt="">
   </a>
-  <a href="img/gallery/portrait/ChrisJoy-5.jpg" data-fancybox="gallery">
+        <a href="img/gallery/landscape/FireIsland-29.jpg" data-fancybox="gallery">
+    <img src="img/gallery/landscape/FireIsland-29.jpg" alt="">
+  </a>
+        <a href="img/gallery/landscape/FireIsland-35.jpg" data-fancybox="gallery">
+    <img src="img/gallery/landscape/FireIsland-35.jpg" alt="">
+  </a>
+        <a href="img/gallery/landscape/pier.jpg" data-fancybox="gallery">
+    <img src="img/gallery/landscape/pier.jpg" alt="">
+  </a>
+        <a href="img/gallery/landscape/two bridges-1.jpg" data-fancybox="gallery">
+    <img src="img/gallery/landscape/two bridges-1.jpg" alt="">
+  </a>
+        <a href="img/gallery/portrait/ChrisJoy-5.jpg" data-fancybox="gallery">
     <img src="img/gallery/portrait/ChrisJoy-5.jpg" alt="">
   </a>
-  <a href="img/gallery/portrait/DessertGoals 0819-16.jpg" data-fancybox="gallery">
+        <a href="img/gallery/portrait/DessertGoals 0819-16.jpg" data-fancybox="gallery">
     <img src="img/gallery/portrait/DessertGoals 0819-16.jpg" alt="">
   </a>
-  <a href="img/gallery/portrait/DessertGoals 0819-80.jpg" data-fancybox="gallery">
+        <a href="img/gallery/portrait/DessertGoals 0819-80.jpg" data-fancybox="gallery">
     <img src="img/gallery/portrait/DessertGoals 0819-80.jpg" alt="">
   </a>
-  <a href="img/gallery/portrait/DYS 07_02-28.jpg" data-fancybox="gallery">
+        <a href="img/gallery/portrait/DYS 07_02-28.jpg" data-fancybox="gallery">
     <img src="img/gallery/portrait/DYS 07_02-28.jpg" alt="">
   </a>
-  <a href="img/gallery/portrait/Gilbert_pshoot-3.jpg" data-fancybox="gallery">
+        <a href="img/gallery/portrait/Gilbert_pshoot-3.jpg" data-fancybox="gallery">
     <img src="img/gallery/portrait/Gilbert_pshoot-3.jpg" alt="">
   </a>
-  <a href="img/gallery/portrait/hurrell-2.jpg" data-fancybox="gallery">
+        <a href="img/gallery/portrait/hurrell-2.jpg" data-fancybox="gallery">
     <img src="img/gallery/portrait/hurrell-2.jpg" alt="">
   </a>
-  <a href="img/gallery/portrait/JoeyWong-1.jpg" data-fancybox="gallery">
+        <a href="img/gallery/portrait/JoeyWong-1.jpg" data-fancybox="gallery">
     <img src="img/gallery/portrait/JoeyWong-1.jpg" alt="">
   </a>
-  <a href="img/gallery/portrait/Joy_Med_2048_noise.jpg" data-fancybox="gallery">
+        <a href="img/gallery/portrait/Joy_Med_2048_noise.jpg" data-fancybox="gallery">
     <img src="img/gallery/portrait/Joy_Med_2048_noise.jpg" alt="">
   </a>
-  <a href="img/gallery/wildlife/FireIsland-21.jpg" data-fancybox="gallery">
+        <a href="img/gallery/wildlife/FireIsland-21.jpg" data-fancybox="gallery">
     <img src="img/gallery/wildlife/FireIsland-21.jpg" alt="">
   </a>
-  <a href="img/gallery/wildlife/topBest15to16-10.jpg" data-fancybox="gallery">
+        <a href="img/gallery/wildlife/topBest15to16-10.jpg" data-fancybox="gallery">
     <img src="img/gallery/wildlife/topBest15to16-10.jpg" alt="">
   </a>
-</section>
-<h1 id="footer">&copy; Jimmy Lauchoy 2017</h1>
-  <!-- JS -->
-  <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous">
-  </script>
-  <script src="js/fancybox/dist/jquery.fancybox.js"></script>
-  <script type="text/javascript" src="js/scripts.js"></script>
+    </section>
+    <h1 id="footer">&copy; Jimmy Lauchoy 2017</h1>
+    <!-- JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    </script>
+    <script src="js/fancybox/dist/jquery.fancybox.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
+
 </html>
